<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">lglin-notes</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Counter List</string>
    <string name="add_name">Add New Counter</string>
    <string name="deleteButton">X</string>
    <string name="statsButton">Stats</string>
    <string name="renameButton">Edit</string>
    <string name="goButton">Count</string>
    <string name="counterCount">Count!</string>
    <string name="counterReset">Reset</string>
    <string name="hourTab">Hourly</string>
    <string name="dayTab">Daily</string>
    <string name="weekTab">Weekly</string>
    <string name="monthTab">Monthly</string>

</resources>
