<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="55dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/hourButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="0dp"
            android:layout_weight="0.25"
            android:minHeight="55dip"
            android:text="@string/hourTab"
            android:textSize="@dimen/statsHeader" />

        <Button
            android:id="@+id/dayButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:minHeight="55dip"
            android:text="@string/dayTab"
            android:textSize="@dimen/statsHeader" />

        <Button
            android:id="@+id/weekButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:minHeight="55dip"
            android:text="@string/weekTab"
            android:textSize="@dimen/statsHeader" />

        <Button
            android:id="@+id/monthButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:minHeight="55dip"
            android:text="@string/monthTab"
            android:textSize="@dimen/statsHeader" />

    </LinearLayout>

    <ListView
        android:id="@+id/statsListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

</LinearLayout>