<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="0dip" 
    android:orientation="horizontal"
    android:layout_weight="1"
    android:padding="10dp" >
    
		<TextView
		    android:id="@+id/countersListText"
		    android:layout_width="wrap_content"
		    android:layout_height="match_parent"
		    android:layout_weight="3"
		    android:padding="10dp"
		    android:textSize="16sp" >

		</TextView>
		
		<Button
	        android:id="@+id/countersStats"
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:layout_weight="0.8"
	        android:text="@string/statsButton" >

	    </Button>
	    
		<Button
	        android:id="@+id/countersRename"
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:layout_weight="0.65"
	        android:text="@string/renameButton" >

	    </Button>
	
	    <Button
	        android:id="@+id/countersDelete"
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:layout_weight="0.3"
	        android:text="@string/deleteButton" >

	    </Button>

</LinearLayout>